Added initial migration

--- a/BloodConnector.DBMigration/BloodConnector.DBMigration.csproj
+++ b/BloodConnector.DBMigration/BloodConnector.DBMigration.csproj
@@ -50,6 +50,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BloodConnectorContext.cs" />
+    <Compile Include="Migrations\201707202045518_InitialMigration.cs" />
+    <Compile Include="Migrations\201707202045518_InitialMigration.Designer.cs">
+      <DependentUpon>201707202045518_InitialMigration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -62,6 +66,11 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201707202045518_InitialMigration.resx">
+      <DependentUpon>201707202045518_InitialMigration.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
