--- a/BloodConnector.WebAPI/Web.config
+++ b/BloodConnector.WebAPI/Web.config
@@ -14,6 +14,7 @@
   <appSettings></appSettings>
   <system.web>
     <authentication mode="None" />
+    <globalization uiCulture="en-GB" culture="en-GB" />
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.6" />
   </system.web>
