--- a/BloodConnector.WebAPI/BloodConnector.WebAPI.csproj
+++ b/BloodConnector.WebAPI/BloodConnector.WebAPI.csproj
@@ -221,17 +221,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201707212256049_InitialState.cs" />
-    <Compile Include="Migrations\201707212256049_InitialState.Designer.cs">
-      <DependentUpon>201707212256049_InitialState.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201707220716167_AddColumnTest.cs" />
-    <Compile Include="Migrations\201707220716167_AddColumnTest.Designer.cs">
-      <DependentUpon>201707220716167_AddColumnTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201707221003069_RemoveTestColumn.cs" />
-    <Compile Include="Migrations\201707221003069_RemoveTestColumn.Designer.cs">
-      <DependentUpon>201707221003069_RemoveTestColumn.cs</DependentUpon>
+    <Compile Include="Migrations\201707240210150_InitialMigration.cs" />
+    <Compile Include="Migrations\201707240210150_InitialMigration.Designer.cs">
+      <DependentUpon>201707240210150_InitialMigration.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
@@ -306,7 +298,9 @@
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -331,14 +325,8 @@
     <None Include="Project_Readme.html" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201707212256049_InitialState.resx">
-      <DependentUpon>201707212256049_InitialState.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201707220716167_AddColumnTest.resx">
-      <DependentUpon>201707220716167_AddColumnTest.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201707221003069_RemoveTestColumn.resx">
-      <DependentUpon>201707221003069_RemoveTestColumn.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201707240210150_InitialMigration.resx">
+      <DependentUpon>201707240210150_InitialMigration.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
