--- a/BloodConnector.WebAPI/BloodConnector.WebAPI.csproj
+++ b/BloodConnector.WebAPI/BloodConnector.WebAPI.csproj
@@ -221,9 +221,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201707281322189_Initial.cs" />
-    <Compile Include="Migrations\201707281322189_Initial.Designer.cs">
-      <DependentUpon>201707281322189_Initial.cs</DependentUpon>
+    <Compile Include="Migrations\201707290944547_InitialMigration.cs" />
+    <Compile Include="Migrations\201707290944547_InitialMigration.Designer.cs">
+      <DependentUpon>201707290944547_InitialMigration.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
@@ -325,8 +325,8 @@
     <None Include="Project_Readme.html" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201707281322189_Initial.resx">
-      <DependentUpon>201707281322189_Initial.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201707290944547_InitialMigration.resx">
+      <DependentUpon>201707290944547_InitialMigration.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
