--- a/BloodConnector.WebAPI/packages.config
+++ b/BloodConnector.WebAPI/packages.config
@@ -1,8 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AngularJS.Core" version="1.6.5" targetFramework="net46" />
+  <package id="AngularJS.Route" version="1.6.5" targetFramework="net46" />
+  <package id="angular-loading-bar" version="0.9.0" targetFramework="net46" />
+  <package id="angular-local-storage" version="0.7.0" targetFramework="net46" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net46" />
   <package id="bootstrap" version="3.3.7" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
+  <package id="FontAwesome" version="4.7.0" targetFramework="net46" />
   <package id="jQuery" version="3.1.1" targetFramework="net46" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net46" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net46" />
