--- a/BloodConnector.WebAPI/packages.config
+++ b/BloodConnector.WebAPI/packages.config
@@ -5,6 +5,7 @@
   <package id="angular-loading-bar" version="0.9.0" targetFramework="net46" />
   <package id="angular-local-storage" version="0.7.0" targetFramework="net46" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net46" />
+  <package id="AutoMapper" version="6.1.1" targetFramework="net46" />
   <package id="bootstrap" version="3.3.7" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net46" />
