--- a/BloodConnector.WebAPI/BloodConnector.WebAPI.csproj
+++ b/BloodConnector.WebAPI/BloodConnector.WebAPI.csproj
@@ -44,10 +44,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AutoMapper, Version=6.1.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
-      <HintPath>..\packages\AutoMapper.6.1.1\lib\net45\AutoMapper.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.5\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
       <Private>True</Private>
@@ -229,6 +225,10 @@
     <Compile Include="Migrations\201707291648178_InitialMigration.Designer.cs">
       <DependentUpon>201707291648178_InitialMigration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707291904031_SetNullavleDOB.cs" />
+    <Compile Include="Migrations\201707291904031_SetNullavleDOB.Designer.cs">
+      <DependentUpon>201707291904031_SetNullavleDOB.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -357,6 +357,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Interface\" />
     <Folder Include="Uploads\" />
   </ItemGroup>
   <ItemGroup>
@@ -366,6 +367,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201707291648178_InitialMigration.resx">
       <DependentUpon>201707291648178_InitialMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707291904031_SetNullavleDOB.resx">
+      <DependentUpon>201707291904031_SetNullavleDOB.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
