--- a/BloodConnector.WebAPI/packages.config
+++ b/BloodConnector.WebAPI/packages.config
@@ -6,6 +6,7 @@
   <package id="angular-local-storage" version="0.7.0" targetFramework="net46" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net46" />
   <package id="bootstrap" version="3.3.7" targetFramework="net46" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net46" />
   <package id="jQuery" version="3.1.1" targetFramework="net46" />
@@ -42,5 +43,8 @@
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="Respond" version="1.2.0" targetFramework="net46" />
+  <package id="Unity" version="4.0.1" targetFramework="net46" />
+  <package id="Unity.AspNet.WebApi" version="4.0.1" targetFramework="net46" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net46" />
   <package id="WebGrease" version="1.5.2" targetFramework="net46" />
 </packages>
