--- a/BloodConnector.WebAPI/packages.config
+++ b/BloodConnector.WebAPI/packages.config
@@ -45,6 +45,7 @@
   <package id="Respond" version="1.2.0" targetFramework="net46" />
   <package id="Unity" version="4.0.1" targetFramework="net46" />
   <package id="Unity.AspNet.WebApi" version="4.0.1" targetFramework="net46" />
+  <package id="Unity.Mvc" version="4.0.1" targetFramework="net46" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net46" />
   <package id="WebGrease" version="1.5.2" targetFramework="net46" />
 </packages>
