--- a/BloodConnector.WebAPI/BloodConnector.WebAPI.csproj
+++ b/BloodConnector.WebAPI/BloodConnector.WebAPI.csproj
@@ -293,6 +293,7 @@
     <Content Include="app\controllers\usersController.js" />
     <Content Include="app\controllers\signupController.js" />
     <Content Include="app\directives\commonDirectives.js" />
+    <Content Include="app\directives\sortTableRow.js" />
     <Content Include="app\services\authInterceptorService.js" />
     <Content Include="app\services\authService.js" />
     <Content Include="app\services\dataService.js" />
