--- a/BloodConnector.WebAPI/BloodConnector.WebAPI.csproj
+++ b/BloodConnector.WebAPI/BloodConnector.WebAPI.csproj
@@ -294,6 +294,7 @@
     <Content Include="app\controllers\signupController.js" />
     <Content Include="app\directives\commonDirectives.js" />
     <Content Include="app\directives\sortTableRow.js" />
+    <Content Include="app\filter\commonFilters.js" />
     <Content Include="app\services\authInterceptorService.js" />
     <Content Include="app\services\authService.js" />
     <Content Include="app\services\dataService.js" />
