--- a/BloodConnector.WebAPI/BloodConnector.WebAPI.csproj
+++ b/BloodConnector.WebAPI/BloodConnector.WebAPI.csproj
@@ -276,6 +276,7 @@
     <Compile Include="Repository\BaseRepository.cs" />
     <Compile Include="Repository\BloodGroupRepository.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
+    <Compile Include="Services\UserServices.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Utilities\Enums.cs" />
     <Compile Include="Utilities\ValidationExtentions.cs" />
