--- a/BloodConnector.WebAPI/Web.config
+++ b/BloodConnector.WebAPI/Web.config
@@ -11,7 +11,9 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Database=BloodConnector;User ID=sa;Password=sa1234;Trusted_Connection=False;Connection Timeout=60;" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings></appSettings>
+  <appSettings>
+    <add key="WebCruiter.Version" value="0.0.0" />
+  </appSettings>
   <system.web>
     <authentication mode="None" />
     <globalization uiCulture="en-GB" culture="en-GB" />
