--- a/BloodConnector.WebAPI/Web.config
+++ b/BloodConnector.WebAPI/Web.config
@@ -11,15 +11,26 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Database=BloodConnector;User ID=sa;Password=sa1234;Trusted_Connection=False;Connection Timeout=60;" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  
   <appSettings>
-    <add key="WebCruiter.Version" value="0.0.0" />
+    <add key="WebCruiter.Version" value="1.0.0" />
   </appSettings>
+  
+  <system.net>
+    <mailSettings>
+      <smtp from="bangladeshitragedy@gmail.com">
+        <network host="smtp.gmail.com" userName="bangladeshitragedy" defaultCredentials="false" password="mahmuda+sazal" port="587" enableSsl="true" />
+      </smtp>
+    </mailSettings>
+  </system.net>
+  
   <system.web>
     <authentication mode="None" />
     <globalization uiCulture="en-GB" culture="en-GB" />
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.6" />
   </system.web>
+  
   <system.webServer>
     <modules>
       <remove name="FormsAuthentication" />
@@ -31,6 +42,7 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
   </system.webServer>
+  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -79,16 +91,19 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+
 </configuration>
