--- a/BloodConnector.WebAPI/BloodConnector.WebAPI.csproj
+++ b/BloodConnector.WebAPI/BloodConnector.WebAPI.csproj
@@ -286,6 +286,7 @@
     <Compile Include="Repository\BaseRepository.cs" />
     <Compile Include="Repository\BloodGroupRepository.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
+    <Compile Include="ServiceResult\ServiceResult.cs" />
     <Compile Include="Services\UserServices.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Utilities\Enums.cs" />
