--- a/BloodConnector.WebAPI/Web.config
+++ b/BloodConnector.WebAPI/Web.config
@@ -10,6 +10,7 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Database=BloodConnector;User ID=sa;Password=sa1234;Trusted_Connection=False;Connection Timeout=60;" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=SQL5021.Smarterasp.net;Database=DB_A1D815_BloodConnector;User ID=DB_A1D815_BloodConnector_admin;Password=arif1234;Trusted_Connection=False;Connection Timeout=60;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   
   <appSettings>
@@ -41,6 +42,21 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+    <directoryBrowse enabled="true" />
+    <staticContent>
+      <remove fileExtension="eot" />
+      <remove fileExtension="ttf" />
+      <remove fileExtension="otf" />
+      <remove fileExtension="woff" />
+      <remove fileExtension="mp4" />
+      <mimeMap fileExtension="eot" mimeType="application/vnd.ms-fontobject" />
+      <mimeMap fileExtension="ttf" mimeType="font/ttf" />
+      <mimeMap fileExtension="otf" mimeType="font/otf" />
+      <mimeMap fileExtension="woff" mimeType="application/font-woff" />
+      <mimeMap fileExtension="woff2" mimeType="application/font-woff2" />
+      <mimeMap fileExtension="mp4" mimeType="video/mp4" />
+      <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="7.00:00:00" />
+    </staticContent>
   </system.webServer>
   
   <runtime>
