--- a/BloodConnector.WebAPI/Web.config
+++ b/BloodConnector.WebAPI/Web.config
@@ -15,6 +15,7 @@
   
   <appSettings>
     <add key="WebCruiter.Version" value="1.0.0" />
+    <add key="logDir" value="\" />
   </appSettings>
   
   <system.net>
