Update email sending code

--- a/BloodConnector.WebAPI/Web.config
+++ b/BloodConnector.WebAPI/Web.config
@@ -20,7 +20,7 @@
   <system.net>
     <mailSettings>
       <smtp from="bangladeshitragedy@gmail.com">
-        <network host="smtp.gmail.com" userName="bangladeshitragedy" defaultCredentials="false" password="mahmuda+sazal" port="587" enableSsl="true" />
+        <network host="smtp.gmail.com" defaultCredentials="false" userName="bangladeshitragedy" password="mahmuda+sazal" port="587" enableSsl="true" />
       </smtp>
     </mailSettings>
   </system.net>
