Added created date and last updated date

--- a/BloodConnector.WebAPI/BloodConnector.WebAPI.csproj
+++ b/BloodConnector.WebAPI/BloodConnector.WebAPI.csproj
@@ -282,6 +282,10 @@
     <Compile Include="Migrations\201710181821172_AddedColBloodGiven.Designer.cs">
       <DependentUpon>201710181821172_AddedColBloodGiven.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201710250307245_CreateAndUpdateDate.cs" />
+    <Compile Include="Migrations\201710250307245_CreateAndUpdateDate.Designer.cs">
+      <DependentUpon>201710250307245_CreateAndUpdateDate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -459,6 +463,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201710181821172_AddedColBloodGiven.resx">
       <DependentUpon>201710181821172_AddedColBloodGiven.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710250307245_CreateAndUpdateDate.resx">
+      <DependentUpon>201710250307245_CreateAndUpdateDate.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
