--- a/BloodConnector.WebAPI/Web.config
+++ b/BloodConnector.WebAPI/Web.config
@@ -27,7 +27,7 @@
   
   <system.web>
     <authentication mode="None" />
-    <globalization uiCulture="en-GB" culture="en-GB" />
+    <globalization uiCulture="en-US" culture="en-US" />
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.6" />
   </system.web>
