Remove unique constraints fromEmail

--- a/BloodConnector.WebAPI/BloodConnector.WebAPI.csproj
+++ b/BloodConnector.WebAPI/BloodConnector.WebAPI.csproj
@@ -290,6 +290,10 @@
     <Compile Include="Migrations\201710260323348_UniqueEmailConstraints.Designer.cs">
       <DependentUpon>201710260323348_UniqueEmailConstraints.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201710291452347_RemoveUniqueKeyFromEmail.cs" />
+    <Compile Include="Migrations\201710291452347_RemoveUniqueKeyFromEmail.Designer.cs">
+      <DependentUpon>201710291452347_RemoveUniqueKeyFromEmail.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -473,6 +477,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201710260323348_UniqueEmailConstraints.resx">
       <DependentUpon>201710260323348_UniqueEmailConstraints.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710291452347_RemoveUniqueKeyFromEmail.resx">
+      <DependentUpon>201710291452347_RemoveUniqueKeyFromEmail.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
