--- a/BloodConnector.WebAPI/Web.config
+++ b/BloodConnector.WebAPI/Web.config
@@ -19,8 +19,8 @@
   
   <system.net>
     <mailSettings>
-      <smtp from="programmingsoln@gmail.com">
-        <network host="smtp.gmail.com" defaultCredentials="false" userName="programmingsoln" password="Mahmuda+Sazal" port="587" enableSsl="true" />
+      <smtp from="bloodconnector@gmail.com" deliveryMethod="Network">
+        <network host="smtp.gmail.com" defaultCredentials="false" userName="bloodconnector" password="conn123B" port="587" enableSsl="true" />
       </smtp>
     </mailSettings>
   </system.net>
